cc: Clear entries from animations maps only when main thread wins

Because we will may need these values in future commits.

BUG=624366
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/2105173006
Cr-Commit-Position: refs/heads/master@{#406131}

Former-commit-id: f03aa24a39fc23c5749b50966c8d1967063faa81